@@ -1,5 +1,7 @@
 v1.6.19
 X theme update causes some layout issues - FIXED
+Kleo listing and CPT pages not using GD titles - FIXED
+Audio custom file fields will now show audio player instead of link - CHANGED
 
 v1.6.18
 Custom field should display label instead of value if set in option values - FIXED
